[gd_scene load_steps=4 format=3 uid="uid://c4lccp4gl0yeu"]

[ext_resource type="Script" path="res://assets/resources/controllers/ai/baseAIController.gd" id="1_jdei5"]

[sub_resource type="SphereMesh" id="SphereMesh_1yinl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_4phkm"]
radius = 4.89842

[node name="baseAIController" type="Node3D"]
script = ExtResource("1_jdei5")

[node name="moveTo" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.241265)

[node name="MeshInstance3D" type="MeshInstance3D" parent="moveTo"]
transform = Transform3D(0.126335, 0, 0, 0, 0.131156, 0, 0, 0, 0.11357, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_1yinl")

[node name="navPointGrabber" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="navPointGrabber"]
shape = SubResource("SphereShape3D_4phkm")

[node name="randomRefresh" type="Timer" parent="."]
wait_time = 0.99

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 5.0
avoidance_enabled = true
radius = 0.3
debug_use_custom = true

[connection signal="timeout" from="randomRefresh" to="." method="_on_random_refresh_timeout"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
